<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etShopName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/shopName" />

    <EditText
        android:id="@+id/etShopAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/shopAddress" />

    <EditText
        android:id="@+id/etShopPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/phone"/>

    <Button
        android:id="@+id/btnAddShopInDB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Добавить новый магазин" />
</LinearLayout>