<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:background="@color/colorLightGreen"
        android:textSize="20sp" />


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvDescrItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/item_name"
 />

            <TextView
                android:id="@+id/tvItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.8"
                android:textColor="@color/colorBlack"
                android:textSize="19sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/item_clr"
 />

            <TextView
                android:id="@+id/tvColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.8"
                android:textColor="@color/colorBlack"
                android:textSize="19sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/count"
 />

            <TextView
                android:id="@+id/tvCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.8"
                android:textColor="@color/colorBlack"
                android:textSize="19sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/brand"

/>

            <TextView
                android:id="@+id/tvBrandItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.8"
                android:textColor="@color/colorBlack"
                android:textSize="19sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:layout_weight="1"
 />

            <TextView
                android:id="@+id/tvCatItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.8"
                android:textColor="@color/colorBlack"
                android:textSize="19sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sport"
                android:layout_weight="1"
/>

            <TextView
                android:id="@+id/tvSportItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.8"
                android:textColor="@color/colorBlack"
                android:textSize="19sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/costItem"
                android:layout_weight="1"
  />

            <TextView
                android:id="@+id/tvCostItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.8"
                android:textColor="@color/colorBlack"
                android:textSize="19sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shopItem"
                android:layout_weight="1"
/>

            <TextView
                android:id="@+id/tvShopItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.8"
                android:textColor="@color/colorBlack"
                android:textSize="19sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/tvShopAddressItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"

            />

            <TextView
                android:id="@+id/tvShopPhoneItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.8"
                android:textColor="@color/colorBlack"
                />
        </TableRow>


    </TableLayout>

</LinearLayout>